Move explanation for problem 2 to book

--- a/src/explanations/1.md
+++ b/src/explanations/1.md
@@ -1,16 +1,24 @@
 # Multiples of 3 or 5
-If we list all the natural numbers below 10 that are multiples of 3 or 5, we get 3, 5, 6 and 9. The sum of these multiples is 23.
+
+If we list all the natural numbers below 10 that are multiples of 3 or 5, we get 3, 5, 6 and 9. The sum of these
+multiples is 23.
 Find the sum of all the multiples of 3 or 5 below 1000.
 
-Explanation: The only tricky part of this exercise comes from the fact that we cannot simply count the multiplies of 3,
+## Solution
+
+The only tricky part of this exercise comes from the fact that we cannot simply count the multiplies of 3,
 then calculate the multiplies of 5, and add these two numbers up. If we did that, then the numbers that are divisible
-by 3 and 5 would be calculated twice.
+by both 3 and 5 would be calculated twice.
+
+In this solution, we create three sets of numbers. If a number of divisible by both 3 and 5, then it's divisible by 15,
+so we can find those numbers and subtract them from the two other sets.
 
 ```scala
 {{#include ../main/scala/Euler001.scala}}
 ```
 
-The problem can be also solved using the modulo operator
+The problem can be also solved by checking all the numbers to see if they're divisible by 3 or 5.
+Shorter, nothing gets counted twice, but you may find it harder to read.
 
 ```scala
 (3 until 1000).filter(n => n % 3 == 0 || n % 5 == 0).sum
