Improve formatting of problem 3 explanation

--- a/src/explanations/3.md
+++ b/src/explanations/3.md
@@ -1,7 +1,8 @@
 # Largest Prime Factor
 
 The prime factors of 13195 are 5, 7, 13 and 29.
-What is the largest prime factor of the number 600851475143.
+
+What is the largest prime factor of the number 600851475143?
 
 ## Solution
 
@@ -10,8 +11,11 @@ Let's consider the number from the description, 13195. We can just try all the n
 check if it's divisible by this prime. Once we found a factor, we can just divide the original number by it.
 
 So, the 13195 turns into 13195 / 5 = 2639.
+
 Then 2639 / 7 = 377.
+
 Then 377 / 13 = 29.
+
 And finally 29 / 29 = 1.
 
 In fact, we could check each result to see if it's a prime, because if it is, then we know that we've found
