Mention time in Problem 7 book

--- a/src/explanations/7.md
+++ b/src/explanations/7.md
@@ -16,7 +16,8 @@ but we'll need these methods later on. For now, a basic algorithm does pretty we
 {{#include ../main/scala/Euler007.scala}}
 ```
 
-And for the reference, that's how we check if a number is a prime. A brute-force solution.
+And for the reference, that's how we check if a number is a prime. A brute-force solution, that ran in 13 ms on my
+machine, which is pretty good already.
 
 ```scala
 {{#include ../main/scala/EulerHelper.scala:6:11}}
