--- a/src/explanations/5.md
+++ b/src/explanations/5.md
@@ -10,7 +10,7 @@ First, let's try to decrease a bit the number of numbers we'll need to check. We
 which we already know the answer.
 
 The 2520 is divisible by all numbers from 1 to 10. We know that among those numbers, 2, 3, 5, 7 are primes. So, if the
-number we're looking for is divisible by all these prime numbers, then it must be a multiple of (2 * 3 * 5 * 7) = 210.
+number we're looking for is divisible by all these prime numbers, then it must be a multiple of (2 × 3 × 5 × 7) = 210.
 
 
 ## Solution
@@ -18,7 +18,7 @@ number we're looking for is divisible by all these prime numbers, then it must b
 We can follow the same logic to find a number that's evenly divisible by all numbers from 1 to 20.
 
 Prime numbers in this set are: 2, 3, 5, 7, 11, 13, 17, 19. The number we're looking for, then, must be a multiple of
-2 * 3 * 5 * 7 * 11 * 13 * 17 * 19 = 9699690.
+2 × 3 × 5 × 7 × 11 × 13 × 17 × 19 = 9699690.
 
 Let's try to find that number!
 
