Change a bit 14.md doc (code format)

--- a/src/explanations/14.md
+++ b/src/explanations/14.md
@@ -46,7 +46,7 @@ Let's think for a while how can we improve the brute-force solution.
 As I've mentioned, some operations are done multiple times. We can memoize them, in an array-based cache for 
 fast lookups. Why array? Because map would be much slowe, and we know its max size.
 
-In fact, we don't have to cache all the values. You can try it out yourself by limiting the `cacheLimit` to 100_000.
+In fact, we don't have to cache all the values. You can try it out yourself by limiting the `cacheLimit`: to 100_000.
 It should be slower, but still faster than the brute-force solution.
 
 ```scala
