Add mutable solution to problem 19

--- a/src/explanations/19.md
+++ b/src/explanations/19.md
@@ -95,3 +95,17 @@ Here's the whole code:
 ```scala
 {{#include ../main/scala/Euler019.scala}}
 ```
+
+## Mutable solution
+
+While reading the previous solution you might be thinking... why don't we just use the standard library? Indeed, we can!
+In fact, this problem is completely trivialized once we do so. We can simply encode the start date and the end date,
+the condition is easily expressed with API for `java.time.LocalDate`.
+
+```scala
+{{#include ../main/scala/Euler019M.scala}}
+```
+
+Easier, cleaner, better. But in this case, most of the information present in the problem description is not used.
+We don't need to check if the year is leap or how many days are in a month. In any project using the standard library
+would be obviously the way to go, but since we're just practicing, it makes sense to try to attempt doing it ourselves.
