--- a/src/explanations/22.md
+++ b/src/explanations/22.md
@@ -5,8 +5,8 @@ alphabetical order. Then working out the alphabetical value for each name, multi
 alphabetical position in the list to obtain a name score.
 
 For example, when the list is sorted into alphabetical order, COLIN, which is worth 
-\\(3 + 15 + 12 + 9 + 14 = 53\)), is the \\(938th\\) name in the list. So, COLIN would obtain a score of 
-\\(938 \time 53 = 49714\\).
+\\(3 + 15 + 12 + 9 + 14 = 53\\), is the \\(938th\\) name in the list. So, COLIN would obtain a score of 
+\\(938 \times 53 = 49714\\).
 
 What is the total of all the name scores in the file?
 
